--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
