--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.0.0",
     "@iconify/react": "^5.2.0",
+    "@mui/lab": "^6.0.0-beta.27",
     "@mui/material": "^6.4.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.9.2",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-lazy-load-image-component": "^1.6.3",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
