--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@iconify/react": "^5.2.0",
     "@mui/lab": "^6.0.0-beta.27",
     "@mui/material": "^6.4.2",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@rtk-incubator/rtk-query": "^0.3.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.9.2",
     "next": "15.1.6",
@@ -23,6 +25,7 @@
     "react-hook-form": "^7.54.2",
     "react-lazy-load-image-component": "^1.6.3",
     "react-player": "^2.16.0",
+    "react-redux": "^7.2.9",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "yup": "^1.6.1"
