--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rtk-incubator/rtk-query": "^0.3.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.9.2",
+    "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
